# dev-tools

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile  package.json
.cargo/: config.toml
app/: Cargo.toml  build.rs
app/locales/: en.json  ru.json
app/src/: app.rs  hljs.rs  lib.rs
app/src/common/: app_error.rs  app_state.rs  constants.rs  json_processor.rs  local_store.rs  mod.rs  net_utils.rs  text_comparator.rs  ui_utils.rs  xml_processor.rs
app/src/components/layout/: language_selector.rs  message_banner.rs  mod.rs  navbar.rs
app/src/components/ui/: autocomplete_input.rs  button.rs  button_link.rs  code_inner.rs  drag_file.rs  file_input.rs  mod.rs  select_input.rs  text_area.rs  text_input.rs
app/src/domain/: mod.rs
app/src/domain/compare_text/: compare_text_page.rs  mod.rs
app/src/domain/home/: home_page.rs
app/src/domain/json/: json_page.rs  mod.rs
app/src/domain/rest_client/: mod.rs  req_params_headers_panel.rs  req_params_panel.rs  rest_client_page.rs  rest_client_response_panel.rs
app/src/domain/rest_client/ui/: mod.rs  req_panel.rs  req_params.rs  req_params_headers_panel.rs  req_params_panel.rs  req_result_panel.rs  request_headers_panel.rs  request_panel.rs  request_params.rs  request_params_panel.rs  request_popup_menu.rs  request_result_panel.rs  rest_client_explorer.rs
app/src/domain/share_file/: mod.rs  share_file_upload_page.rs  share_file_view_page.rs
app/src/domain/url_encode/: mod.rs  url_encode_page.rs
app/src/domain/xml/: mod.rs  xml_page.rs
app/src/model/: mod.rs  rest_client_request.rs  rest_client_response.rs
public/: manifest.json
server/: Cargo.toml
server/migrations/: 01_share_files_create.sql
server/src/: db.rs  lib.rs  main.rs  server_starter.rs
server/src/app_router/: build_app_router.rs  compare_text_router.rs  json_escape_router.rs  json_format_router.rs  mod.rs  rest_client_router.rs  share_file_router.rs  share_local_file_router.rs  test_json_router.rs  url_encode_router.rs  xml_escape_router.rs  xml_format_router.rs  xml_router.rs
server/src/common/: app_error.rs  app_state.rs  compress_utils.rs  dev_utils.rs  image_utils.rs  json_formatter.rs  mod.rs  net_utils.rs
server/src/db/: mod.rs  share_files_db.rs
server/src/model/: mod.rs  share_file.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
style/: tailwind.css
