[workspace]
resolver = "2"
members = ["app", "server"]

[workspace.dependencies]

anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
axum-macros = "0.4"
console_error_panic_hook = "0.1"
#leptos = { version = "0.8", features = ["nightly"] }
leptos = { version = "0.8"}
leptos_axum = "0.8"
leptos_meta = "0.8"
#leptos_router = { version = "0.8", features = ["nightly"] }
leptos_router = { version = "0.8"}
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"]}
tw_merge = { version = "0.1", features = ["variant", "debug"]}
quick-xml = { version = "0.40.1", features = ["async-tokio"]}
futures-util = "0.3.32"
tokio-util = { version = "0.7", features = ["io"] } 
bytes = "1.12.0"
gloo-net = "0.6"
gloo-storage = "0.3"
async-stream = "0.3"
gloo-utils = "0.3.0"
js-sys = "0.3.102"
html-escape = "0.2.13"
urlencoding = "2.1"

[[workspace.metadata.leptos]]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "dev_tools"

name = "dev_tools"

bin-package = "server"
lib-package = "app"
site-root = "site"
assets-dir = "public"
site-pkg-dir = "pkg"

tailwind-input-file = "style/tailwind.css"
#style-file = "style/main.scss"

site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = []
bin-default-features = true
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
# Optimize for size
opt-level = "z"      # Optimize for size (or "s" for slightly less aggressive)
lto = true           # Link-Time Optimization
codegen-units = 1    # Single codegen unit for better optimization
#panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols

[profile.release.package."*"]
opt-level = "z"      # Also optimize dependencies for size

[profile.dev]
opt-level = 0
debug = "line-tables-only"
