[package]
name = "server"
version = "0.4.0"
edition = "2024"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum-macros.workspace = true
axum.workspace = true
leptos_axum.workspace = true
log.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace=true
bytes.workspace=true
quick-xml.workspace=true
async-stream.workspace=true
urlencoding.workspace=true
json-escape.workspace=true
dotenvy.workspace=true
tokio-util.workspace=true
sqlx.workspace=true
http.workspace=true
nanoid.workspace=true
image.workspace=true
reqwest.workspace=true
flate2.workspace=true
difference.workspace=true
html-escape.workspace=true
clap.workspace=true

app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
