[package]
name = "webdev_useful_tools"
version = "0.3.0"
description = "Useful tools for web developers"
edition = "2024"

[workspace]

[features]
default = []
tauri = []

[lib]
name = "webdev_useful_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
dotenvy = { version = "0.15" }
log = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
server = { path = "../server" }
app = { path = "../app" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
